Adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde, voluptas quisquam. Nostrum dignissimos ut repellendus, sed animi quidem rerum nihil minus ex natus esse dolore hic possimus quibusdam, molestiae eveniet?</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor commodi eius eveniet possimus eligendi aut velit asperiores quo fugiat laboriosam. Fugiat veritatis a odio laboriosam illum asperiores reprehenderit veniam praesentium.</p>
 </body>
 </html>
